made gameover delete the save